# computationalGeometry

./: README.md
AVLTree/: AVL.h  AVLNode.h  AVLTesting.cpp  CMakeLists.txt
BST/: BST.h  BSTNode.h  BSTTesting.cpp  BinNode.h  CMakeLists.txt  Integer.h  dictionary.h  preorder.cpp
LineSegmentIntersections/: CMakeLists.txt  EventPoint.h  EventQueue.h  IntersectionChecker.h  IntersectionFinder.h  LSITesting.cpp  Line.h  LineHash.h  LinePtrEqual.h  LinePtrHash.h  StatusStructure.h  lineList.txt
complexHull/: CMakeLists.txt  ConvexHullEngine.h  ConvexHullTest.cpp  buildAndTest.sh  point.h  pointsList.txt
convexHull/: CMakeLists.txt  ConvexHullEngine.h  ConvexHullTest.cpp  boundaryPoints.csv  buildAndDebug.sh  buildAndTest.sh  point.h  pointsList.txt
dcel/: readme.md
quadTree/: CMakeLists.txt  QuadTreeTest.cpp
